--- a/exercises/templates/add.html
+++ b/exercises/templates/add.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>Add a Student</h1>
-    <form method="post">
-        <input type="text" name="CHANGE_ME" placeholder="CHANGE ME">
+    <form action="/vote" method="post">
+        <input type="text" name="student_name" placeholder="Student Name">
+        <input type="text" name="student_year" placeholder="Student Year">
         <br>
         <input type="submit" value="Submit">
     </form>
