--- a/exercises/templates/add.html
+++ b/exercises/templates/add.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Add a Student</h1>
-    <form action="/vote" method="post">
+    <form action="/vote" method="post"j>
         <input type="text" name="student_name" placeholder="Student Name">
         <input type="text" name="student_year" placeholder="Student Year">
         <br>
