--- a/lab/templates/student.html
+++ b/lab/templates/student.html
@@ -12,5 +12,8 @@
 	Finished Lab: {{student.finished_lab}}
 	</p>
     <p><a href="{{url_for('home')}}">Home</a></p>
+    <form  method="post" action="/delete/<int:student_id>'">
+        <input type="submit" value="delete"> delete {{student.name}} ?
+    </form>
 </body>
 </html>
